@@ -1,3 +1,6 @@
+2015/10/26:
+Fix the Makefile in an attempt to allow installation under opam/Cygwin.
+
 2015/10/23:
 New declaration "%on_error_reduce foo", where foo is a nonterminal symbol.
 This modifies the automaton as follows. In every state where a production of
